<resources>
    <string name="app_name">Not Chess</string>

    <!--  Key  -->
    <string name="start_level">start_level</string>
    <string name="start_ai_option">start_ai_option</string>
    
    <string name="W_Heart">W_Heart</string>
    <string name="W_King">W_King</string>
    <string name="W_Queen">W_Queen</string>
    <string name="W_Bishop">W_Bishop</string>
    <string name="W_Knight">W_Knight</string>
    <string name="W_Rook">W_Rook</string>
    <string name="W_Pawn">W_Pawn</string>
    <string name="B_Heart">B_Heart</string>
    <string name="B_King">B_King</string>
    <string name="B_Queen">B_Queen</string>
    <string name="B_Bishop">B_Bishop</string>
    <string name="B_Knight">B_Knight</string>
    <string name="B_Rook">B_Rook</string>
    <string name="B_Pawn">B_Pawn</string>

    <!--  Setting  -->
    <string name="setting_rotate_pieces">setting_rotate_pieces</string>
    <string name="rotate_pieces_title">Rotate Pieces</string>
    <string name="rotate_pieces_summary">Rotate the direction of pieces when it is black\'s turn.</string>

    <string name="setting_show_move_hint">setting_show_move_hint</string>
    <string name="show_move_hint_title">Show Move Hint</string>
    <string name="show_move_hint_summary">Show hint for move options of a selected piece.</string>

    <string name="setting_show_attack_info">setting_show_attack_info</string>
    <string name="show_attack_info_title">Show Attack Info</string>
    <string name="show_attack_info_summary">Show attacking and under attack info of a touched block.</string>

    <!--  game over dialog text  -->
    <string name="black_wins">Black Wins</string>
    <string name="white_wins">White Wins</string>

    <!--  Text  -->
    <string name="whites_move">%d. White\'s move</string>
    <string name="blacks_move">%d. Black\'s move</string>
    <string name="white_is_thinking">%d. White is thinking</string>
    <string name="black_is_thinking">%d. Black is thinking</string>
    <string name="play_with_ai">Play with AI:</string>

    <!--  Word  -->
    <string name="levels">Levels</string>
    <string name="customization">Customization</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="columns">Columns:</string>
    <string name="rows">Rows:</string>
    <string name="delete">Delete</string>
    <string name="enter_title">Enter title…</string>
    <string name="by_xu_huang_lin">by Xu Huang Lin</string>
    <string name="ai">AI</string>

    <string-array name="ai_option">
        <item>Off</item>
        <item>Black</item>
        <item>White</item>
    </string-array>
</resources>