<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/setting_rotate_pieces"
        android:title="@string/rotate_pieces_title"
        android:summary="@string/rotate_pieces_summary" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/setting_show_move_hint"
        android:title="@string/show_move_hint_title"
        android:summary="@string/show_move_hint_summary" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/setting_show_attack_info"
        android:title="@string/show_attack_info_title"
        android:summary="@string/show_attack_info_summary" />

</PreferenceScreen>